added listErrorReporter with file writing, added non-absolute paths